bk_ida/gccida/g1/expand_unop
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/optabs.c:2534:19: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  expand_unop( machine_mode mode, optab_0 unoptab, rtx op0, rtx target, int unsignedp) 
                  ^
                  enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/optabs.c:2534:38: error: unknown type name 'optab_0'; did you mean 'optab'?
rtx  expand_unop( machine_mode mode, optab_0 unoptab, rtx op0, rtx target, int unsignedp) 
                                     ^~~~~~~
                                     optab
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/optabs.h:48:5: note: 'optab' declared here
} * optab;
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/optabs.c:2539:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code insn_code; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/optabs.c:2541:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/optabs.c:2549:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/optabs.c:2550:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v22; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/optabs.c:2554:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v26; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/optabs.c:2560:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v32; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/optabs.c:2575:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v47; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/optabs.c:2579:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code v51; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/optabs.c:2539:11: note: enum 'insn_code' is hidden by a non-type declaration of 'insn_code' here
insn_code insn_code; // eax 
          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/optabs.c:2583:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class classa; // [rsp+28h] [rbp-40h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/optabs.c:2587:10: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
classa = mode_class_0[mode]; 
         ^~~~~~~~~~~~
         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/optabs.c:2602:11: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
operand = insn_data_0[insn_code].operand; 
          ^~~~~~~~~~~
          insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/optabs.c:2616:11: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
operand = insn_data_0[v51].operand; 
          ^~~~~~~~~~~
          insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/optabs.c:2637:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v15 = insn_data_0[icode].genfun( v9, xop0); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/optabs.c:2637:32: error: called object type '<dependent type>' is not a function or function pointer
v15 = insn_data_0[icode].genfun( v9, xop0); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/optabs.c:2661:33: error: invalid suffix 'xmode' on integer constant
&& unoptab->handlers[*(short *)0xmode].insn_code != CODE_FOR_nothing ) 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/optabs.c:2671:31: error: invalid suffix 'orce' on integer constant
v30 = operand_sub*(short *)0xforce( v8, v27, mode); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/optabs.c:2671:7: error: use of undeclared identifier 'operand_sub'
v30 = operand_sub*(short *)0xforce( v8, v27, mode); 
      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_unop/src/obj/optabs.o] Error 1
